tests/src/frontend/typechecking/invalid/whenparam_inherit1.sk
base class Foo {
  fun foo(): void;
}

class Bar<T>() extends Foo {
  fun foo[T: Int](): void {
    void
  }
}
